components/expanse/include/expanse.h

/* ---- Library identity ---------------------------------------------- */

/* Version of the libexpanse build, "MAJOR.MINOR.PATCH". */
const char *expanse_version(void);
/* ---- expanse_set_t: ordered set of uint64_t keys (cf. Judy1) -------- */

typedef struct expanse_set expanse_set_t;
expanse_set_t *expanse_set_new(void);
void           expanse_set_free(expanse_set_t *set);
/* Returns true if the key was newly inserted / actually removed. */
bool     expanse_set_insert(expanse_set_t *set, uint64_t key);
bool     expanse_set_remove(expanse_set_t *set, uint64_t key);
bool     expanse_set_contains(const expanse_set_t *set, uint64_t key);
uint64_t expanse_set_len(const expanse_set_t *set);
size_t   expanse_set_mem_used(const expanse_set_t *set);
void     expanse_set_clear(expanse_set_t *set);
/*
 * Ordered navigation. Each writes the found key through `key_out` and
 * returns true; false means no such key (and `key_out` is untouched).
 * The _at_or_ variants include the given key itself.
 */
bool expanse_set_first(const expanse_set_t *set, uint64_t *key_out);
bool expanse_set_last(const expanse_set_t *set, uint64_t *key_out);
bool expanse_set_next_after(const expanse_set_t *set, uint64_t key, uint64_t *key_out);
bool expanse_set_prev_before(const expanse_set_t *set, uint64_t key, uint64_t *key_out);
/* Rank and select, both O(depth). */
uint64_t expanse_set_count_below(const expanse_set_t *set, uint64_t key);
uint64_t expanse_set_count_range(const expanse_set_t *set, uint64_t lo, uint64_t hi);
bool     expanse_set_by_count(const expanse_set_t *set, uint64_t n, uint64_t *key_out);
/* ---- expanse_map_t: ordered uint64_t -> uint64_t map (cf. JudyL) ---- */

typedef struct expanse_map expanse_map_t;
expanse_map_t *expanse_map_new(void);
void           expanse_map_free(expanse_map_t *map);
/*
 * insert: stores key -> value. If the key was present, writes the
 * replaced value through `old_out` (when non-NULL) and returns false;
 * returns true when the key is new.
 */
bool     expanse_map_insert(expanse_map_t *map, uint64_t key, uint64_t value, uint64_t *old_out);
bool     expanse_map_get(const expanse_map_t *map, uint64_t key, uint64_t *value_out);
bool     expanse_map_remove(expanse_map_t *map, uint64_t key, uint64_t *old_out);
uint64_t expanse_map_len(const expanse_map_t *map);
size_t   expanse_map_mem_used(const expanse_map_t *map);
void     expanse_map_clear(expanse_map_t *map);
/* Ordered navigation; `value_out` may be NULL if only the key matters. */
bool expanse_map_first(const expanse_map_t *map, uint64_t *key_out, uint64_t *value_out);
bool expanse_map_last(const expanse_map_t *map, uint64_t *key_out, uint64_t *value_out);
bool expanse_map_next_after(const expanse_map_t *map, uint64_t key,
                            uint64_t *key_out, uint64_t *value_out);
bool expanse_map_prev_before(const expanse_map_t *map, uint64_t key,
                             uint64_t *key_out, uint64_t *value_out);
/* ---- expanse_bytesmap_t: unordered bytes -> uint64_t (cf. JudyHS) --- */

typedef struct expanse_bytesmap expanse_bytesmap_t;
expanse_bytesmap_t *expanse_bytesmap_new(void);
void                expanse_bytesmap_free(expanse_bytesmap_t *map);
bool     expanse_bytesmap_insert(expanse_bytesmap_t *map, const void *key, size_t len,
                                 uint64_t value, uint64_t *old_out);
bool     expanse_bytesmap_get(const expanse_bytesmap_t *map, const void *key, size_t len,
                              uint64_t *value_out);
bool     expanse_bytesmap_remove(expanse_bytesmap_t *map, const void *key, size_t len,
                                 uint64_t *old_out);
uint64_t expanse_bytesmap_len(const expanse_bytesmap_t *map);
void     expanse_bytesmap_clear(expanse_bytesmap_t *map);
/* ---- expanse_strmap_t: ordered C-string -> uint64_t map (cf. JudySL) - */

typedef struct expanse_strmap expanse_strmap_t;
expanse_strmap_t *expanse_strmap_new(void);
void              expanse_strmap_free(expanse_strmap_t *map);
bool     expanse_strmap_insert(expanse_strmap_t *map, const char *key, uint64_t value,
                               uint64_t *old_out);
bool     expanse_strmap_get(const expanse_strmap_t *map, const char *key, uint64_t *value_out);
bool     expanse_strmap_remove(expanse_strmap_t *map, const char *key, uint64_t *old_out);
uint64_t expanse_strmap_len(const expanse_strmap_t *map);
void     expanse_strmap_clear(expanse_strmap_t *map);
/* ---- ExpanseBlobMap: polymorphic large-value map with inline/arena backing ---- */

typedef struct ExpanseBlobMap ExpanseBlobMap;
/*
 * A zero-copy view of a stored payload.
 *
 * INVALIDATION CONTRACT (same spirit as the JudyL value-slot contract):
 * `ptr` borrows directly into the map's inline slot memory or arena slab and
 * stays valid ONLY until the next structural mutation of that map. Any
 * expanse_blob_map_insert / _remove / _clear / _compact / _free invalidates
 * every previously returned ExpanseBlobView.ptr — reading through it afterwards
 * is undefined behavior. Copy the bytes out before mutating if you need them to
 * outlive the next mutation. Views delivered to a scan callback are valid only
 * for the duration of that callback invocation.
 */
typedef struct {
    const uint8_t *ptr;
    size_t         len;
    uint32_t       hot_meta;
    bool           is_inline;
} ExpanseBlobView;
ExpanseBlobMap *expanse_blob_map_new(size_t chunk_size);
void            expanse_blob_map_free(ExpanseBlobMap *map);
bool expanse_blob_map_insert(
    ExpanseBlobMap *map,
    uint64_t key,
    const uint8_t *data,
    size_t len,
    uint32_t hot_meta
);
bool expanse_blob_map_remove(ExpanseBlobMap *map, uint64_t key);
bool expanse_blob_map_get(
    const ExpanseBlobMap *map,
    uint64_t key,
    ExpanseBlobView *out_view
);
uint64_t expanse_blob_map_len(const ExpanseBlobMap *map);
void     expanse_blob_map_clear(ExpanseBlobMap *map);
bool     expanse_blob_map_contains_key(const ExpanseBlobMap *map, uint64_t key);